fetching supplier part for stock tables

--- a/InvenTree/company/templates/company/detail_stock.html
+++ b/InvenTree/company/templates/company/detail_stock.html
@@ -24,6 +24,7 @@
             company: {{ company.id }},
             part_detail: true,
             supplier_detail: true,
+            supplier_part_detail: true,
             location_detail: true,
         },
         buttons: [
