--- a/InvenTree/company/templates/company/supplier_part_stock.html
+++ b/InvenTree/company/templates/company/supplier_part_stock.html
@@ -23,6 +23,7 @@
             supplier_part: {{ part.id }},
             location_detail: true,
             part_detail: false,
+            supplier_part_detail: true,
         },
         groupByField: 'location',
         buttons: ['#stock-options'],
