--- a/InvenTree/order/templates/order/po_received_items.html
+++ b/InvenTree/order/templates/order/po_received_items.html
@@ -26,6 +26,7 @@ loadStockTable($("#stock-table"), {
         purchase_order: {{ order.id }},
         part_detail: true,
         supplier_detail: true,
+        supplier_part_detail: true,
         location_detail: true,
     },
     buttons: [
