--- a/InvenTree/stock/templates/stock/item_childs.html
+++ b/InvenTree/stock/templates/stock/item_childs.html
@@ -31,6 +31,7 @@ loadStockTable($("#stock-table"), {
     params: {
         location_detail: true,
         part_detail: false,
+        supplier_part_detail: true,
         ancestor: {{ item.id }},
     },
     name: 'item-childs',
