--- a/InvenTree/stock/templates/stock/location.html
+++ b/InvenTree/stock/templates/stock/location.html
@@ -265,6 +265,7 @@
             {% endif %}
             part_detail: true,
             location_detail: true,
+            supplier_part_detail: true,
         },
         url: "{% url 'api-stock-list' %}",
     });
