--- a/InvenTree/company/templates/company/assigned_stock.html
+++ b/InvenTree/company/templates/company/assigned_stock.html
@@ -29,6 +29,7 @@ loadStockTable($("#stock-table"), {
     params: {
         customer: {{ company.id }},
         part_detail: true,
+        supplier_part_detail: true,
         location_detail: true,
     },
     url: "{% url 'api-stock-list' %}",
