--- a/InvenTree/templates/InvenTree/index.html
+++ b/InvenTree/templates/InvenTree/index.html
@@ -134,6 +134,7 @@ addHeaderAction('stock-to-build', '{% trans "Required for Build Orders" %}', 'fa
 loadStockTable($('#table-recently-updated-stock'), {
     params: {
         part_detail: true,
+        supplier_part_detail: true,
         ordering: "-updated",
         max_results: {% settings_value "STOCK_RECENT_COUNT" %},
     },
@@ -151,6 +152,7 @@ loadStockTable($("#table-expired-stock"), {
         expired: true,
         location_detail: true,
         part_detail: true,
+        supplier_part_detail: true,
     },
 });
 
@@ -160,6 +162,7 @@ loadStockTable($("#table-stale-stock"), {
         expired: false,
         location_detail: true,
         part_detail: true,
+        supplier_part_detail: true,
     },
 });
 {% endif %}
