Fix filters for ManufacturerPart and SupplierPart table views

--- a/InvenTree/company/templates/company/detail_manufacturer_part.html
+++ b/InvenTree/company/templates/company/detail_manufacturer_part.html
@@ -85,7 +85,7 @@
             params: {
                 part_detail: true,
                 manufacturer_detail: true,
-                company: {{ company.id }},
+                manufacturer: {{ company.id }},
             },
         }
     );
