--- a/InvenTree/company/templates/company/detail_supplier_part.html
+++ b/InvenTree/company/templates/company/detail_supplier_part.html
@@ -84,7 +84,7 @@
                 part_detail: true,
                 supplier_detail: true,
                 manufacturer_detail: true,
-                company: {{ company.id }},
+                supplier: {{ company.id }},
             },
         }
     );
