remove unneeded tag

--- a/InvenTree/stock/templates/stock/item_base.html
+++ b/InvenTree/stock/templates/stock/item_base.html
@@ -248,15 +248,14 @@
         <td><span class='fas fa-hashtag'></span></td>
         <td>{% trans "Serial Number" %}</td>
         <td>
-        {% resolve request.path as url_path %}
         {% if previous %}
-            <a class="btn btn-default" aria-label="{% trans 'previous page' %}" href="{% url url_path.url_name previous.id %}">
+            <a class="btn btn-default" aria-label="{% trans 'previous page' %}" href="{% url request.resolver_match.url_name previous.id %}">
                 <small>{{ previous.serial }}</small>  ‹
             </a>
         {% endif %}
         <span class="btn" href=""><strong>{{ item.serial }}</strong></span>
         {% if next %}
-            <a class="btn btn-default text-sm" aria-label="{% trans 'next page' %}" href="{% url url_path.url_name next.id %}">
+            <a class="btn btn-default text-sm" aria-label="{% trans 'next page' %}" href="{% url request.resolver_match.url_name next.id %}">
                 ›  <small>{{ next.serial }}</small>
             </a>
         {% endif %}
