--- a/InvenTree/part/templates/part/part_base.html
+++ b/InvenTree/part/templates/part/part_base.html
@@ -268,6 +268,10 @@
         );
     });
 
+    $('#print-label').click(function() {
+        printPartLabels([{{ part.pk }}]);
+    });
+
     $("#part-count").click(function() {
         launchModalForm("/stock/adjust/", {
             data: {
