--- a/InvenTree/part/templates/part/navbar.html
+++ b/InvenTree/part/templates/part/navbar.html
@@ -78,12 +78,6 @@
         </a>
     </li>
     {% if part.purchaseable and roles.purchase_order.view %}
-    <li class='list-group-item {% if tab == "manufacturers" %}active{% endif %}' title='{% trans "Manufacturers" %}'>
-        <a href='{% url "part-manufacturers" part.id %}'>
-            <span class='menu-tab-icon fas fa-industry sidebar-icon'></span>
-            {% trans "Manufacturers" %}
-        </a>
-    </li>
     <li class='list-group-item {% if tab == "suppliers" %}active{% endif %}' title='{% trans "Suppliers" %}'>
         <a href='{% url "part-suppliers" part.id %}'>
             <span class='menu-tab-icon fas fa-building sidebar-icon'></span>
@@ -109,7 +103,7 @@
     <li class='list-group-item {% if tab == "tests" %}active{% endif %}' title='{% trans "Part Test Templates" %}'>
         <a href='{% url "part-test-templates" part.id %}'>
             <span class='menu-tab-icon fas fa-vial sidebar-icon'></span>
-            {% trans "Tests" %}
+            {% trans "Test Templates" %}
         </a>
     </li>
     {% endif %}
