--- a/InvenTree/part/templates/part/supplier.html
+++ b/InvenTree/part/templates/part/supplier.html
@@ -6,12 +6,13 @@
 {% include 'part/navbar.html' with tab='suppliers' %}
 {% endblock %}
 
+
 {% block heading %}
 {% trans "Part Suppliers" %}
 {% endblock %}
 
 {% block details %}
-<div id='button-toolbar'>
+<div id='supplier-button-toolbar'>
     <div class='btn-group'>
         <button class="btn btn-success" id='supplier-create'>
             <span class='fas fa-plus-circle'></span> {% trans "New Supplier Part" %}
@@ -25,8 +26,35 @@
     </div>
 </div>
 
-<table class="table table-striped table-condensed" id='supplier-table' data-toolbar='#button-toolbar'>
+<table class="table table-striped table-condensed" id='supplier-table' data-toolbar='#supplier-button-toolbar'>
 </table>
+
+{% endblock %}
+
+{% block post_content_panel %}
+<div id='manufacturer-button-toolbar'>
+    <div class='btn-group'>
+        <button class="btn btn-success" id='manufacturer-create'>
+            <span class='fas fa-plus-circle'></span> {% trans "New Manufacturer Part" %}
+        </button>
+        <div id='opt-dropdown' class="btn-group">
+            <button id='manufacturer-part-options' class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">{% trans "Options" %}<span class="caret"></span></button>
+            <ul class="dropdown-menu">
+                <li><a href='#' id='manufacturer-part-delete' title='{% trans "Delete manufacturer parts" %}'>{% trans "Delete" %}</a></li>
+            </ul>
+        </div>
+    </div>
+</div>
+<div class='panel panel-default panel-inventree'>
+    <div class='panel-heading'>
+        <h4>
+            {% trans "Part Manufacturers" %}
+        </h4>
+    </div>
+    <div class='panel-content'>
+        <table class='table table-condensed table-striped' id='manufacturer-table' data-toolbar='#manufacturer-button-toolbar'></table>
+    </div>
+</div>
 
 {% endblock %}
 
@@ -90,6 +118,49 @@
         }
     );
 
-    linkButtonsToSelection($("#supplier-table"), ['#supplier-part-options'])
+    linkButtonsToSelection($("#supplier-table"), ['#supplier-part-options']);
+
+    loadManufacturerPartTable(
+        '#manufacturer-table',
+        "{% url 'api-manufacturer-part-list' %}",
+        {
+            params: {
+                part: {{ part.id }},
+                part_detail: true,
+                manufacturer_detail: true,
+            },
+        }
+    );
+
+    linkButtonsToSelection($("#manufacturer-table"), ['#manufacturer-part-options']);
+
+    $("#manufacturer-part-delete").click(function() {
+
+        var selections = $("#manufacturer-table").bootstrapTable("getSelections");
+
+        deleteManufacturerParts(selections, {
+            onSuccess: function() { 
+                $("#manufacturer-table").bootstrapTable("refresh");
+            }
+        });
+    });
+
+    $('#manufacturer-create').click(function () {
+        launchModalForm(
+            "{% url 'manufacturer-part-create' %}",
+            {
+                reload: true,
+                data: {
+                    part: {{ part.id }}
+                },
+                secondary: [
+                    {
+                        field: 'manufacturer',
+                        label: '{% trans "New Manufacturer" %}',
+                        title: '{% trans "Create new manufacturer" %}',
+                    }
+                ]
+            });
+    });
 
 {% endblock %}
