--- a/InvenTree/part/templates/part/detail.html
+++ b/InvenTree/part/templates/part/detail.html
@@ -238,6 +238,30 @@
 
 {% endblock %}
 
+{% block post_content_panel %}
+
+<div class='panel panel-default panel-inventree'>
+    <div class='panel-heading'>
+        <h4>
+            {% trans "Part Parameters" %}
+        </h4>
+    </div>
+    <div class='panel-content'>
+        <div id='param-button-toolbar'>
+            <div class='button-toolbar container-fluid' style='float: right;'>
+                {% if roles.part.add %}
+                <button title='{% trans "Add new parameter" %}' class='btn btn-success' id='param-create'>
+                    <span class='fas fa-plus-circle'></span> {% trans "New Parameter" %}
+                </button>
+                {% endif %}
+            </div>
+        </div>
+        <table id='parameter-table' class='table table-condensed table-striped' data-toolbar="#param-button-toolbar"></table>
+    </div>
+</div>
+
+{% endblock %}
+
 {% block js_load %}
 {{ block.super }}
 {% endblock %}
@@ -261,6 +285,56 @@
                 reloadOnSuccess: true,
             },
         );
+    });
+
+    loadPartParameterTable(
+        '#parameter-table', 
+        '{% url "api-part-parameter-list" %}',
+        {
+            params: {
+                part: {{ part.pk }},
+            }
+        }
+    );
+
+    $('#param-table').inventreeTable({
+    });
+
+    {% if roles.part.add %}
+    $('#param-create').click(function() {
+
+        constructForm('{% url "api-part-parameter-list" %}', {
+            method: 'POST',
+            fields: {
+                part: {
+                    value: {{ part.pk }},
+                    hidden: true,
+                },
+                template: {},
+                data: {},
+            },
+            title: '{% trans "Add Parameter" %}',
+            onSuccess: function() {
+                $('#parameter-table').bootstrapTable('refresh');
+            }
+        });
+    });
+    {% endif %}
+
+    $('.param-edit').click(function() {
+        var button = $(this);
+
+        launchModalForm(button.attr('url'), {
+            reload: true,
+        });
+    });
+
+    $('.param-delete').click(function() {
+        var button = $(this);
+
+        launchModalForm(button.attr('url'), {
+            reload: true,
+        });
     });
 
 {% endblock %}
