--- a/InvenTree/stock/templates/stock/location.html
+++ b/InvenTree/stock/templates/stock/location.html
@@ -59,11 +59,17 @@
         {% if owner_control.value == "False" or owner_control.value == "True" and user in owners or user.is_superuser %}
         {% if roles.stock.change %}
         <div class='btn-group'>
-            <button id='stock-actions' title='{% trans "Stock actions" %}' class='btn btn-default dropdown-toggle' type='button' data-toggle='dropdown'><span class='fas fa-boxes'></span> <span class='caret'></span></button>
+            <button id='stock-actions' title='{% trans "Stock actions" %}' class='btn btn-default dropdown-toggle' type='button' data-toggle='dropdown'>
+                <span class='fas fa-boxes'></span> <span class='caret'></span>
+            </button>
             <ul class='dropdown-menu' role='menu'>
-                <li><a href='#' id='location-count'><span class='fas fa-clipboard-list'></span>
-                    {% trans "Count stock" %}</a></li>
-                </ul>
+                <li>
+                    <a href='#' id='location-count'>
+                        <span class='fas fa-clipboard-list'></span>
+                        {% trans "Count stock" %}
+                    </a>
+                </li>
+            </ul>
             </div>
             {% endif %}
             {% if roles.stock_location.change %}
