Add some more functionality to StockLocation page

--- a/InvenTree/part/templates/part/part_base.html
+++ b/InvenTree/part/templates/part/part_base.html
@@ -63,7 +63,7 @@
                         <li>
                             <a href='#' id='part-move'>
                                 <span class='fas fa-exchange-alt'></span>
-                                {% trans "Move part stock" %}
+                                {% trans "Transfer part stock" %}
                             </a>
                         </li>
                     </ul>
