--- a/InvenTree/company/templates/company/detail_manufacturer_part.html
+++ b/InvenTree/company/templates/company/detail_manufacturer_part.html
@@ -53,29 +53,23 @@
 {{ block.super }}
 
     $("#manufacturer-part-create").click(function () {
-        launchModalForm(
-            "{% url 'manufacturer-part-create' %}",
-            {
-                data: {
-                    manufacturer: {{ company.id }},
+
+        constructForm('{% url "api-manufacturer-part-list" %}', {
+            fields: {
+                part: {},
+                manufacturer: {
+                    value: {{ company.pk }},
                 },
-                success: function() {
-                    $("#part-table").bootstrapTable("refresh");
-                },
-                secondary: [
-                    {
-                        field: 'part',
-                        label: '{% trans "New Part" %}',
-                        title: '{% trans "Create new Part" %}',
-                        url: "{% url 'part-create' %}"
-                    },
-                    {
-                        field: 'manufacturer',
-                        label: '{% trans "New Manufacturer" %}',
-                        title: '{% trans "Create new Manufacturer" %}',
-                    },
-                ]
-            });
+                MPN: {},
+                description: {},
+                link: {},
+            },
+            method: 'POST',
+            title: '{% trans "Add Manufacturer Part" %}',
+            onSuccess: function() { 
+                $("#part-table").bootstrapTable("refresh");
+            }
+        });
     });
 
     loadManufacturerPartTable(
