Move "attachments" and "notes" to "Part Detail" page
(cherry picked from commit daf0a082dc04c04cfd68cab70148a7d7cf28460f)

--- a/InvenTree/InvenTree/static/css/inventree.css
+++ b/InvenTree/InvenTree/static/css/inventree.css
@@ -837,6 +837,12 @@ input[type="submit"] {
     pointer-events: none; /* Prevent this div from blocking links underneath */
 }
 
+.notes {
+    border-radius: 5px;
+    background-color: #fafafa;
+    padding: 5px;
+}
+
 .alert {
     display: none;
     border-radius: 5px;
@@ -851,6 +857,11 @@ input[type="submit"] {
 .btn {
     margin-left: 2px;
     margin-right: 2px;
+}
+
+.btn-small {
+    padding: 3px;
+    padding-left: 5px;
 }
 
 .btn-remove {
