Consolidate pages for StockItem
- Move "attachments" to detail page
- Move "notes" to detail page
- inline editing of notes via API forms

--- a/InvenTree/part/templates/part/detail.html
+++ b/InvenTree/part/templates/part/detail.html
@@ -151,9 +151,8 @@
             </td>
             <td>
                 <div class='btn-group float-right'>
-                    <button type='button' id='edit-notes' title='{% trans "Edit Notes" %}' class='btn btn-small btn-default'>
-                        <span class='fas fa-edit'>      
-                        </span>
+                    <button type='button' id='edit-notes' title='{% trans "Edit notes" %}' class='btn btn-small btn-default'>
+                        <span class='fas fa-edit'></span>
                     </button>
                 </div>
             </td>
