--- a/InvenTree/templates/InvenTree/index.html
+++ b/InvenTree/templates/InvenTree/index.html
@@ -12,17 +12,21 @@
 <hr>
 
 <div class='col-sm-3' id='item-panel'>
-    <ul class='list-group' id='action-item-list'>
-    </ul>
+    <div class='panel-default panel-inventree'>
+        <ul class='list-group' id='action-item-list'>
+        </ul>
+    </div>
 </div>
 <div class='col-sm-9' id='details-panel'>
-    <ul class='list-group' id='detail-item-list'>
-        <li class='list-group-item'>
-            <div class='container'>
-                <img class='index-bg' src='{% static "img/inventree.png" %}'>
-            </div>
-        </li>
-    </ul>
+    <div class='panel-default panel-inventree'>
+        <ul class='list-group' id='detail-item-list'>
+            <li class='list-group-item'>
+                <div class='container'>
+                    <img class='index-bg' src='{% static "img/inventree.png" %}'>
+                </div>
+            </li>
+        </ul>
+    </div>
 </div>
 
 {% endblock %}
