--- a/InvenTree/InvenTree/static/css/inventree.css
+++ b/InvenTree/InvenTree/static/css/inventree.css
@@ -912,6 +912,10 @@ input[type="submit"] {
     box-shadow: 1px 1px #DDD;
 }
 
+.panel-hidden {
+    display: none;
+}
+
 .float-right {
     float: right;
 }
