--- a/InvenTree/order/templates/order/sales_order_detail.html
+++ b/InvenTree/order/templates/order/sales_order_detail.html
@@ -12,7 +12,7 @@
 
 {% block page_content %}
 
-<div class='panel panel-default panel-inventree' id='panel-order-items'>
+<div class='panel panel-default panel-inventree panel-hidden' id='panel-order-items'>
     <div class='panel-heading'>
         <h4>{% trans "Sales Order Items" %}</h4>
     </div>
@@ -29,7 +29,7 @@
     </div>
 </div>
 
-<div class='panel panel-default panel-inventree' id='panel-order-builds'>
+<div class='panel panel-default panel-inventree panel-hidden' id='panel-order-builds'>
     <div class='panel-heading'>
         <h4>{% trans "Build Orders" %}</h4>
     </div>
@@ -38,7 +38,7 @@
     </div>
 </div>
 
-<div class='panel panel-default panel-inventree' id='panel-order-attachments'>
+<div class='panel panel-default panel-inventree panel-hidden' id='panel-order-attachments'>
     <div class='panel-heading'>
         <h4>{% trans "Attachments" %}</h4>
     </div>
@@ -47,7 +47,7 @@
     </div>
 </div>
 
-<div class='panel panel-default panel-inventree' id='panel-order-notes'>
+<div class='panel panel-default panel-inventree panel-hidden' id='panel-order-notes'>
     <div class='panel-heading'>
         <div class='row'>
             <div class='col-sm-6'>
@@ -610,6 +610,11 @@ function setupCallbacks() {
                 success: reloadTable,
             }
         );
+    });
+
+    attachNavCallbacks({
+        name: 'sales-order',
+        default: 'order-items'
     });
 }
 
