Refactor PurchaseOrder display

--- a/InvenTree/order/templates/order/sales_order_detail.html
+++ b/InvenTree/order/templates/order/sales_order_detail.html
@@ -51,7 +51,7 @@
     <div class='panel-heading'>
         <div class='row'>
             <div class='col-sm-6'>
-                <h4>{% trans "Notes" %}</h4>
+                <h4>{% trans "Order Notes" %}</h4>
             </div>
             <div class='col-sm-6'>
                 <div class='btn-group float-right'>
