--- a/InvenTree/order/templates/order/so_navbar.html
+++ b/InvenTree/order/templates/order/so_navbar.html
@@ -9,28 +9,28 @@
         </a>
     </li>
 
-    <li class='list-group-item nav-item' title='{% trans "Sales Order Line Items" %}'>
+    <li class='list-group-item' title='{% trans "Sales Order Line Items" %}'>
         <a href='#' id='select-order-items' class='nav-toggle'>
             <span class='fas fa-list-ol sidebar-icon'></span>
             {% trans "Order Items" %}
         </a>
     </li>
 
-    <li class='list-group-item nav-item' title='{% trans "Build Orders" %}'>
+    <li class='list-group-item' title='{% trans "Build Orders" %}'>
         <a href='#' id='select-order-builds' class='nav-toggle'>
             <span class='fas fa-tools sidebar-icon'></span>
             {% trans "Build Orders" %}
         </a>
     </li>
 
-    <li class='list-group-item nav-item' title='{% trans "Sales Order Attachments" %}'>
+    <li class='list-group-item' title='{% trans "Sales Order Attachments" %}'>
         <a href='#' id='select-order-attachments' class='nav-toggle'>
             <span class='fas fa-paperclip sidebar-icon'></span>
             {% trans "Attachments" %}
         </a>
     </li>
 
-    <li class='list-group-item nav-item' title='{% trans "Notes" %}'>
+    <li class='list-group-item' title='{% trans "Notes" %}'>
         <a href='#' id='select-order-notes' class='nav-toggle'>
             <span class='fas fa-clipboard sidebar-icon'></span>
             {% trans "Notes" %}
