Refactor Company detail view

--- a/InvenTree/company/templates/company/company_base.html
+++ b/InvenTree/company/templates/company/company_base.html
@@ -71,6 +71,17 @@
     <td><a href="{{ company.website }}">{{ company.website }}</a>{% include "clip.html"%}</td>
 </tr>
 {% endif %}
+<tr>
+    <td><span class='fas fa-dollar-sign'></span></td>
+    <td>{% trans "Currency" %}</td>
+    <td>
+        {% if company.currency %}
+        {{ company.currency }}
+        {% else %}
+        <i>{% trans "Uses default currency" %}</i>
+        {% endif %}
+    </td>
+</tr>
 {% if company.address %}
 <tr>
     <td><span class='fas fa-map-marked-alt'></span></td>
@@ -99,6 +110,22 @@
     <td>{{ company.contact }}{% include "clip.html"%}</td>
 </tr>
 {% endif %}
+
+<tr>
+    <td><span class='fas fa-industry'></span></td>
+    <td>{%trans "Manufacturer" %}</td>
+    <td>{% include "yesnolabel.html" with value=company.is_manufacturer %}</td>
+</tr>
+<tr>
+    <td><span class='fas fa-building'></span></td>
+    <td>{% trans "Supplier" %}</td>
+    <td>{% include 'yesnolabel.html' with value=company.is_supplier %}</td>
+</tr>
+<tr>
+    <td><span class='fas fa-user-tie'></span></td>
+    <td>{% trans "Customer" %}</td>
+    <td>{% include 'yesnolabel.html' with value=company.is_customer %}</td>
+</tr>
 </table>
 {% endblock %}
 
